<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnCreateAlbumBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/back_album"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvAlbumDetailHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/albums_bottom_nav"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="@id/btnCreateAlbumBack"
                app:layout_constraintBottom_toBottomOf="@id/btnCreateAlbumBack"
                app:layout_constraintStart_toEndOf="@id/btnCreateAlbumBack" />

            <TextView
                android:id="@+id/tvAlbumDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/color_text"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/tvAlbumDetailHeaderTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/create_album_title"/>

            <TextView
                android:id="@+id/labelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/create_album_name"
                android:textColor="@color/color_text"
                android:labelFor="@+id/etAlbumName"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/tvAlbumDetailTitle"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etAlbumName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@drawable/search_field_style"
                android:gravity="center_vertical"
                android:inputType="textCapSentences"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/color_text"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintTop_toBottomOf="@id/labelName"/>

            <TextView
                android:id="@+id/labelImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/create_album_image"
                android:textColor="@color/color_text"
                android:labelFor="@+id/etAlbumCover"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/etAlbumName"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etAlbumCover"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@drawable/search_field_style"
                android:gravity="center_vertical"
                android:inputType="textCapSentences"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/color_text"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintTop_toBottomOf="@id/labelImage"/>

            <TextView
                android:id="@+id/labelDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/create_album_date"
                android:textColor="@color/color_text"
                android:labelFor="@+id/etAlbumReleaseDate"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/etAlbumCover"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etAlbumReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@drawable/search_field_style"
                android:gravity="center_vertical"
                android:inputType="none"
                android:focusable="false"
                android:paddingHorizontal="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/color_text"
                android:textSize="12sp"
                android:drawableEnd="@drawable/baseline_calendar_month_24"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintTop_toBottomOf="@id/labelDate"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/labelDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/create_album_description"
                android:textColor="@color/color_text"
                android:labelFor="@+id/etAlbumDescription"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/etAlbumReleaseDate"
                app:layout_constraintStart_toStartOf="parent" />

            <FrameLayout
                android:id="@+id/flDescriptoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/labelDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/etAlbumDescription"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:autofillHints=""
                    android:background="@drawable/search_field_style"
                    android:gravity="top|start"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="5"
                    android:maxLength="500"
                    android:padding="16dp"
                    android:paddingBottom="32dp"
                    android:textColor="@color/color_text"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins_regular" />

                <TextView
                    android:id="@+id/charCounterDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="8dp"
                    android:text="@string/char_counter_default"
                    android:textColor="@color/hint_text"
                    android:textSize="11sp"
                    android:fontFamily="@font/poppins_regular" />
            </FrameLayout>

            <TextView
                android:id="@+id/labelGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/create_album_genre"
                android:textColor="@color/color_text"
                android:labelFor="@+id/etAlbumGenre"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/flDescriptoin"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinnerGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/spinner_background"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/labelGenre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/labelRecordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/create_album_recordLabel"
                android:textColor="@color/color_text"
                android:labelFor="@+id/etAlbumRecordLabel"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/spinnerGenre"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinnerRecordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/spinner_background"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/labelRecordLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btnSubmitAlbum"
                android:text="@string/create_album_button"
                android:layout_marginTop="56dp"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="16dp"
                style="@style/CustomButtonStyle"
                app:layout_constraintTop_toBottomOf="@id/spinnerRecordLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
