<resources>
    <string name="app_name">Vinilos</string>
    <string name="logo_description">Logo vinilos</string>
    <string name="bands_button_text">Bandas</string>
    <string name="musicians_button_text">Músicos</string>
    <string name="visitor_button_text">Soy visitante</string>
    <string name="publish_button_text">Publicar</string>
    <string name="collector_button_text">Soy coleccionista</string>
    <string name="albums_bottom_nav">Álbumes</string>
    <string name="header_title_description">Listado de</string>
    <string name="artists_bottom_nav">Artistas</string>
    <string name="collectors_bottom_nav">Coleccionistas</string>
    <string name="add_album">Crear álbum</string>
    <string name="back_album">Volver a listado de álbumes</string>
    <string name="back_artist">Volver a listado de artistas</string>
    <string name="back_collector">Volver a listado de coleccionistas</string>
    <string name="logout">Cerrar session</string>
    <string name="hitn_search_field">Buscar</string>
    <string name="go_to_detail">Ir al detalle</string>
...
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="char_counter_format">%1$d/%2$d</string>
    <string name="success_title">¡Perfecto!</string>
    <string name="error_title">Hubo un problema</string>
    <string name="button_dialog">ACEPTAR</string>
    <string name="comment_error">No debes dejar vacío el campo de comentario.</string>
    <string name="score_error">Debes seleccionar una calificación de para el álbum.</string>
    <string name="success_comment">Tu comentario se ha publicado exitosamente.</string>
    <string name="type_collector">collector</string>
    <string name="cover_image_collector">Logo del coleccionista</string>
    <string name="empty_collectors">No se encontraron coleccionistas que coincidan con tu búsqueda</string>
...
