<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:padding="16dp"
    android:fitsSystemWindows="true">
...
        android:layout_marginTop="40dp"
        android:src="@drawable/vinilos_logo"
        android:contentDescription="@string/logo_description"
        android:adjustViewBounds="true"/>

    <Button
        android:id="@+id/visitorButton"
        android:text="@string/visitor_button_text"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="16dp"
        style="@style/CustomButtonStyle"/>

    <Button
        android:id="@+id/collectorButton"
        android:text="@string/collector_button_text"
        style="@style/CustomButtonStyle"/>
</LinearLayout>
