...
        android:textColor="@color/color_text"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/dialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_dialog"
        android:fontFamily="@font/poppins_bold"
        android:textSize="12sp"
        android:textColor="@color/color_text"
...
