...
                    android:contentDescription="@string/artist_image"
                    android:src="@drawable/album_placeholder"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvAlbumDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/color_text"
...
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintTop_toBottomOf="@id/tvDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvAlbumes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/color_text"
                android:textSize="18sp"
...
