<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/albums_bottom_nav"
        android:id="@+id/albums"
        android:icon="@drawable/baseline_library_music_24"/>
    <item android:title="@string/artists_bottom_nav"
        android:id="@+id/artists"
        android:icon="@drawable/baseline_interpreter_mode_24"/>
    <item android:title="@string/collectors_bottom_nav"
        android:id="@+id/collectors"
        android:icon="@drawable/baseline_album_24"/>
</menu>